--- a/auteur.html
+++ b/auteur.html
@@ -40,12 +40,10 @@
   <aside class="anchors">
     <p>Sur cette page</p>
     <ul>
-      <li><a href="#Qui">Qui a réalisé ce mini-site ?</a>
-      <small>
-      <li><a href="#Turkaslan">Turkaslan</a></li>
-      <li><a href="#Tunc">Tunc</a></li>
-      <li><a href="#Boumaiza">Boumaiza</a></li>
-      </small>
+      <li><a href="#Qui">Qui a réalisé ce mini-site ?</a></li>
+      <li id="auteur"><a href="#Turkaslan">Turkaslan</a></li>
+      <li id="auteur"><a href="#Tunc">Tunc</a></li>
+      <li id="auteur"><a href="#Boumaiza">Boumaiza</a></li>
       <li><a href="#Objectif">Objectif du projet</a></li> 
       <li><a href="#Contact">Contact</a></li>
     </ul>
