--- a/auteur.html
+++ b/auteur.html
@@ -41,9 +41,9 @@
     <p>Sur cette page</p>
     <ul>
       <li><a href="#Qui">Qui a réalisé ce mini-site ?</a></li>
-      <li id="auteur"><a href="#Turkaslan">Turkaslan</a></li>
-      <li id="auteur"><a href="#Tunc">Tunc</a></li>
-      <li id="auteur"><a href="#Boumaiza">Boumaiza</a></li>
+      <li class="auteur"><a href="#Turkaslan">Turkaslan</a></li>
+      <li class="auteur"><a href="#Tunc">Tunc</a></li>
+      <li class="auteur"><a href="#Boumaiza">Boumaiza</a></li>
       <li><a href="#Objectif">Objectif du projet</a></li> 
       <li><a href="#Contact">Contact</a></li>
     </ul>
